objects/SubProject__c.object
<CustomObject>
    <description>Subproject contains project information related to project type and/or product(s), as well as milestones, project logs and additional details;  rolls up to the Project.</description>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <label>Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Convert__c</fullName>
        <description>Field to convert picklist value to a text value</description>
        <formula>TEXT( SubProject_Region__c )</formula>
        <inlineHelpText>None needed - not on page layout</inlineHelpText>
        <label>BU Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_PMC__c</fullName>
        <formula>IF( PMC_Convert__c = &quot;Region&quot;,  BU_Convert__c, BU_Convert__c&amp;(&quot;-&quot; &amp;PMC_Convert__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU-PMC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Alignment_Workshop_Date__c</fullName>
        <label>Business Alignment Workshop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Unit Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_Sell_Clone_Type__c</fullName>
        <label>Buy-Sell Clone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clone - Multi-Company to Single Company Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone - Q-Pointer Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone - Single Company to Multi-Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Renumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logon Rename</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - see Special Instructions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF_Numbers__c</fullName>
        <label>CMF Number(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <label>CMF</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Survey__c</fullName>
        <label>CSI Survey %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTI_Desktop__c</fullName>
        <label>CTI Desktop</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Main_Site__r.BillingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Intro_Call_15__c</fullName>
        <formula>IF( ISBLANK( Client_Intro_Call_Conducted__c ) ,null,  Client_Intro_Call_Conducted__c  -  Contract_Roll_Called__c )</formula>
        <label>Client Intro Call (&lt;=15)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Intro_Call_Conducted__c</fullName>
        <label>Client Intro Call Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Input scope details and notes (i.e. HOLD information, contacts w/o workspace, etc.)</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Details__c</fullName>
        <label>Contract Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Call_10__c</fullName>
        <formula>IF(  ISBLANK( Contract_Review_Call_Conducted__c ), null , Contract_Review_Call_Conducted__c  -  Contract_Roll_Called__c )</formula>
        <label>Contract Review Call (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Call_Conducted__c</fullName>
        <label>Contract Review Call Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Roll_Called__c</fullName>
        <label>Contract Roll Called</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_of_Discovery_Wbks_on_SubProject__c</fullName>
        <description>Rollup of all the Discovery Workbook records on a subproject</description>
        <label>Count of Discovery Wbks on SubProject</label>
        <summaryForeignKey>Site_Workbook__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Milestones_on_SubProject__c</fullName>
        <description>Rollup field to display the number of Milestone records on a SubProject</description>
        <label>Count of Milestones on SubProject</label>
        <summaryForeignKey>Project_Milestone__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_SubProject_Sites__c</fullName>
        <label>Count of SubProject Sites</label>
        <summaryForeignKey>SubProjectSite__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTA__c</fullName>
        <label>DTA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_A_Status__c</fullName>
        <label>D&amp;A Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_PMC_Assigned__c</fullName>
        <description>The date that the PMC field was updated from &quot;region&quot; to another value</description>
        <inlineHelpText>This field is read-only but updated when the PMC field is changes from Region to any other value</inlineHelpText>
        <label>Date PMC Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Sold__c</fullName>
        <label>Days Sold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Used__c</fullName>
        <label>Days Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <label>Deal Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SubProjects (Dealer Name)</relationshipLabel>
        <relationshipName>SubProjects_Dealer_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealership_Phone__c</fullName>
        <label>Dealership Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Does_Report_To_Me__c</fullName>
        <formula>(NOT(ISBLANK( Manager_Id_Of_Project_Manager__c )) &amp;&amp; ( Manager_Id_Of_Project_Manager__c == $User.Id))
|| (NOT(ISBLANK( Manager_Id_Of_Manager__c )) &amp;&amp; ( Manager_Id_Of_Manager__c == $User.Id))</formula>
        <label>Does Report To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>ER Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Date_EID__c</fullName>
        <label>Estimated Install Date (EID)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FES_Details__c</fullName>
        <label>FES Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Main_Site__r.Fax</formula>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_PSR_sent_to_Client__c</fullName>
        <label>Final PSR sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_45__c</fullName>
        <formula>IF( ISBLANK( Forms_Received__c ) , null ,  Estimated_Install_Date_EID__c  -  Forms_Received__c  )</formula>
        <label>Forms (&gt;=45)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms_Received__c</fullName>
        <label>Forms Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HW_NW_Installed__c</fullName>
        <label>HW/NW Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H_W_20__c</fullName>
        <formula>IF( ISBLANK( HW_NW_Installed__c ) , null ,  Estimated_Install_Date_EID__c  -  HW_NW_Installed__c  )</formula>
        <label>H/W (&gt;=20)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H_W_Specialist_PFW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>H/W Specialist (PFW)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjects_HW_Specialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Heavy_Equipment_Manufacturer_Franchise__c</fullName>
        <label>Heavy Equipment Manufacturer/Franchise</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_90__c</fullName>
        <formula>IF( ISBLANK( Project_Plan_Delivered_to_Client__c ) , null ,  Estimated_Install_Date_EID__c  -  Project_Plan_Delivered_to_Client__c )</formula>
        <label>IPP (&gt;=90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Telephony__c</fullName>
        <label>IP Telephony</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_Folders__c</fullName>
        <description>Link to Folder Structure to save documents.</description>
        <label>Impact Folders Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Impact_Project_Numbers__c</fullName>
        <label>Impact Project Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Start_Date_Migration_Date__c</fullName>
        <label>Install Start Date / Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Project_Managed_By_Me__c</fullName>
        <formula>NOT(ISBLANK( SubProject_Manager_Id__c )) &amp;&amp; ( SubProject_Manager_Id__c == $User.Id)</formula>
        <label>Is Project Managed By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lag_Time_to_Install__c</fullName>
        <formula>IF( ISBLANK( Estimated_Install_Date_EID__c ) , null ,  Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c )</formula>
        <label>Lag Time to Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Logon_Access__c</fullName>
        <label>Logon Access</label>
        <picklist>
            <picklistValues>
                <fullName>90-day free default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Access Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not needed for this project type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MS_Project_Workspace__c</fullName>
        <label>MS Project Workspace Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Main_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SubProjects</relationshipLabel>
        <relationshipName>SubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Manager__c</fullName>
        <formula>Project_Manager__r.Manager.ManagerId</formula>
        <label>Manager Id Of Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Project_Manager__c</fullName>
        <formula>Project_Manager__r.ManagerId</formula>
        <label>Manager Id Of Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Dash - Small Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive - Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed - Powersports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW - Heavy Equipment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestones_Auto_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if Standard Milestones are created for the SubProject</description>
        <label>Milestones Auto Generated Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Certified__c</fullName>
        <label>Network Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_CMF__c</fullName>
        <label>New CMF#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_C__c</fullName>
        <label>New C#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Code__c</fullName>
        <label>New Dealer Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_GL_CO__c</fullName>
        <label>New GL CO#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Hosting__c</fullName>
        <label>New Hosting</label>
        <picklist>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_IP_Address__c</fullName>
        <label>New IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Location__c</fullName>
        <label>New Location</label>
        <picklist>
            <picklistValues>
                <fullName>Ann Arbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Logons__c</fullName>
        <label>New Logons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Manufacturer__c</fullName>
        <label>New Manufacturer</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Platform__c</fullName>
        <label>New Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CDK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK DriveXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 200*</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Server_URL_CDK_CRM__c</fullName>
        <label>New Server URL (CDK CRM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Server_URL_CDK_VEHICLE__c</fullName>
        <label>New Server URL (CDK VEHICLE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_DL_Scanners__c</fullName>
        <label>Number of DL Scanners</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooftops__c</fullName>
        <label>Number of Rooftops</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_User_Connections__c</fullName>
        <label>Number of User Connections</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Integration__c</fullName>
        <label>OEM Integration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CMF__c</fullName>
        <label>Old CMF#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_C__c</fullName>
        <label>Old C#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Dealer_Code__c</fullName>
        <label>Old Dealer Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_GL_CO__c</fullName>
        <label>Old GL CO#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Hosting__c</fullName>
        <label>Old Hosting</label>
        <picklist>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_IP_Address__c</fullName>
        <label>Old IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Location__c</fullName>
        <label>Old Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Logons__c</fullName>
        <label>Old Logons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Manufacturer__c</fullName>
        <label>Old Manufacturer</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Platform__c</fullName>
        <label>Old Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CDK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK DriveXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 200*</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PFW_Verification_Meeting_Conducted__c</fullName>
        <label>PFW Verification Meeting Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_Convert__c</fullName>
        <description>Store PMC value as text</description>
        <formula>TEXT( Project_Management_Center__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>None won&apos;t be on page</inlineHelpText>
        <label>PMC Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <formula>Project_Manager__r.Email</formula>
        <label>PM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Phone__c</fullName>
        <formula>Project_Manager__r.Phone</formula>
        <label>PM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Main_Site__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Client_10__c</fullName>
        <formula>IF( ISBLANK( Pre_GoLive_Mtg_Client_Conducted__c ) , null ,  Estimated_Install_Date_EID__c  -  Pre_GoLive_Mtg_Client_Conducted__c  )</formula>
        <label>Pre-GoLive Mtg (Client) (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Client_Conducted__c</fullName>
        <label>Pre-GoLive Mtg (Client) Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Internal_20__c</fullName>
        <formula>IF( ISBLANK(  Pre_GoLive_Mtg_Internal_Conducted__c  ) , null ,  Estimated_Install_Date_EID__c  -  Pre_GoLive_Mtg_Internal_Conducted__c  )</formula>
        <label>Pre-GoLive Mtg (Internal) (&gt;=20)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Internal_Conducted__c</fullName>
        <label>Pre-GoLive Mtg (Internal) Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Training_80__c</fullName>
        <label>Pre-Install Training (&gt;=80%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_System__c</fullName>
        <description>This field is to indicate the previous system (if applicable) for the client</description>
        <inlineHelpText>Previous system for the client.  Use this field to indicate the client&apos;s previous system - whether a CDK system and/or a competitor</inlineHelpText>
        <label>Previous System</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Discovery_Meeting_30__c</fullName>
        <formula>IF( ISBLANK( Process_Discovery_Mtg_Conducted__c ) , null ,  Process_Discovery_Mtg_Conducted__c  -  Contract_Roll_Called__c )</formula>
        <label>Process Discovery Meeting (&lt;=30)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Discovery_Mtg_Conducted__c</fullName>
        <label>Process Discovery Mtg Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Overview_Meeting_Conducted__c</fullName>
        <label>Process Overview Meeting Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Assigned_to_PM_PS__c</fullName>
        <label>Project Assigned to PM/PS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Close_20__c</fullName>
        <formula>IF( ISBLANK( Final_PSR_sent_to_Client__c ) , null ,  Final_PSR_sent_to_Client__c  -  Transition_Meeting_Conducted__c  )</formula>
        <label>Project Close (&lt;=20)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Kick_Off_Mtg_Internal_90__c</fullName>
        <formula>IF( ISBLANK( Project_Kick_Off_Mtg_Internal__c ) , null ,  Estimated_Install_Date_EID__c  -  Project_Kick_Off_Mtg_Internal__c )</formula>
        <label>Project Kick-Off Mtg (Internal) (&gt;=90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Kick_Off_Mtg_Internal__c</fullName>
        <label>Project Kick-Off Mtg (Internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Management_Center__c</fullName>
        <label>Project Management Center</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford SMARTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjectsMgrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager_s_Manager__c</fullName>
        <description>field to display the project manager&apos;s manager</description>
        <formula>Project_Manager__r.Manager.FirstName &amp; &quot; &quot; &amp;  Project_Manager__r.Manager.LastName</formula>
        <inlineHelpText>This is an automated field to have the assigned project manager&apos;s manager name</inlineHelpText>
        <label>Project Manager&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Step 1 - Discovery (Pre-Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 1 - Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 2 - Project Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 3 - Site Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 4 - CDK GoLive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 5 - Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 6 - Ongoing Training (Closed)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Delivered_to_Client__c</fullName>
        <label>Project Plan Delivered to Client</label>
        <type>Date</type>
    </fields>
</CustomObject>